added new module

--- a/Hello.html
+++ b/Hello.html
@@ -1,7 +1,8 @@
 <html>
     <body>
-<h1>hello World india</h1>
 <h2>Welcome to Branch and Merging</h2>
 <h2>You are in Main Branch</h2>
-    </body>
+
+<h1>added new module </h1>
+</body>
     </html>
